--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,5 +1,6 @@
 ﻿@page
 @model RegisterModel
+@inject Pieshop.ViewServices.ProfileOptionsService Options
 @{
     ViewData["Title"] = "Register";
 }
@@ -49,9 +50,15 @@
             </div>
             <div class="form-group">
                 <label asp-for="Input.Country"></label>
-                <input asp-for="Input.Country" class="form-control" />
+                <select asp-for="Input.Country" class="form-control">
+                    @foreach(var item in Options.ListCountries())
+                    {
+                        <option value="@item">@item</option>
+                    }
+                </select>
                 <span asp-validation-for="Input.Country" class="text-danger"></span>
             </div>
+          
             <button type="submit" class="btn btn-default">Register</button>
         </form>
     </div>
