--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -50,11 +50,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Input.Country"></label>
-                <select asp-for="Input.Country" class="form-control">
-                    @foreach(var item in Options.ListCountries())
-                    {
-                        <option value="@item">@item</option>
-                    }
+                <select asp-for="Input.Country" asp-items="@Options.ListCountries()" class="form-control">
                 </select>
                 <span asp-validation-for="Input.Country" class="text-danger"></span>
             </div>
