--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -12,7 +12,7 @@
             @if(User.IsInRole("Admin"))
             {
             <li>
-                <a asp-area="Admin" asp-controller="/Admin/UserManagement" title="ManageUsers">Admin</a>
+                <a asp-controller="Admin" asp-action="UserManagement" title="ManageUsers">Admin</a>
             </li>
             }
             <li>
