--- a/Views/Admin/AddUser.cshtml
+++ b/Views/Admin/AddUser.cshtml
@@ -17,18 +17,18 @@
     </div>
 
     <div class="form-group">
-        <label asp-for="Firstname" class="col-md-2 control-label"></label>
+        <label asp-for="FirstName" class="col-md-2 control-label"></label>
         <div class="col-md-10">
-            <input asp-for="Firstname" class="form-control" />
-            <span asp-validation-for="Firstname" class="text-danger"></span>
+            <input asp-for="FirstName" class="form-control" />
+            <span asp-validation-for="FirstName" class="text-danger"></span>
         </div>
     </div>
 
     <div class="form-group">
-        <label asp-for="Lastname" class="col-md-2 control-label"></label>
+        <label asp-for="LastName" class="col-md-2 control-label"></label>
         <div class="col-md-10">
-            <input asp-for="Lastname" class="form-control" />
-            <span asp-validation-for="Lastname" class="text-danger"></span>
+            <input asp-for="LastName" class="form-control" />
+            <span asp-validation-for="LastName" class="text-danger"></span>
         </div>
     </div>
 
@@ -41,10 +41,10 @@
     </div>
 
     <div class="form-group">
-        <label asp-for="Birthdate" class="col-md-2 control-label"></label>
+        <label asp-for="BirthDate" class="col-md-2 control-label"></label>
         <div class="col-md-10">
-            <input asp-for="Birthdate" class="form-control" />
-            <span asp-validation-for="Birthdate" class="text-danger"></span>
+            <input asp-for="BirthDate" class="form-control" />
+            <span asp-validation-for="BirthDate" class="text-danger"></span>
         </div>
     </div>
 
@@ -68,11 +68,19 @@
     <div class="form-group">
         <label asp-for="Roles" class="col-md-2 control-label"></label>
         <div class="col-md-10">
-            <select asp-for="Roles" multiple asp-items="@options.ListRoles()" class="form-control">
-            </select>
+            <div asp-multichecklist-for="Roles" asp-items="@options.ListRoles()"></div>
             <span asp-validation-for="Roles" class="text-danger"></span>
         </div>
     </div>
+
+    @*<div class="form-group">
+            <label asp-for="Roles" class="col-md-2 control-label"></label>
+            <div class="col-md-10">
+                <select asp-for="Roles" multiple asp-items="@options.ListRoles()" class="form-control">
+                </select>
+                <span asp-validation-for="Roles" class="text-danger"></span>
+            </div>
+        </div>*@
 
     <div class="form-group">
         <label asp-for="Password" class="col-md-2 control-label"></label>
