dist cache as service - resp caching added

--- a/Views/Pie/Details.cshtml
+++ b/Views/Pie/Details.cshtml
@@ -5,7 +5,7 @@
 <div class="thumbnail">
         <img alt="@Model.Pie.Name" src="@Model.Pie.ImageUrl">
         <div class="caption-full">
-            <h3 class="pull-right">@Model.Pie.Price</h3>
+            <h3 class="pull-right">@Model.Pie.Price.ToString("c")</h3>
             <h3>
                 <a href="#">@Model.Pie.Name</a>
             </h3>
